updates university logos container to flex wrap. fixes bug with mobile homepage

--- a/css/styles.css
+++ b/css/styles.css
@@ -214,6 +214,7 @@ a {
 .university-logos {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
 }
 .university-logos img {
   margin: 25px;
